# high-level-programming-languages

lb_1/: alembic.ini  main.py  pyproject.toml
lb_1/api/: router_page.py
lb_1/api/currency/: crud.py  schemas.py  views.py
lb_1/api/rates/: crud.py  schemas.py  views.py
lb_1/api/templates/: archieve.html  base.html  index.html
lb_1/core/: config.py
lb_1/core/models/: __init__.py  base.py  currency.py  db_helper.py  exchange_rate.py
lb_1/migrations/: env.py
lb_1/migrations/versions/: 4f5ed171d606_complete_first_lab.py
lb_2/backend/: server.js
lb_2/frontend/src/: App.js
pz_1/: practical_lesson_1.py
pz_2/: README.md
pz_2/task_1_variant_5/: image.json  index.html  script.js
pz_2/task_2_variant_5/: level2.js
pz_2/task_3and4_variant_5/: index.html  package-lock.json  package.json
pz_2/task_3and4_variant_5/src/: App.css  App.jsx
